# airavata-cerebrum

./: .asf.yaml  .flake8  .gitignore  INSTALL.md  README.md  Roadmap.md  env_full.yml  env_minimal.yml  environment.yml  pyproject.toml  pyrcfg.json  requirements.txt  setup.py
airavata_cerebrum/: base.py  register.py  workflow.py
airavata_cerebrum/atlas/: README.md
airavata_cerebrum/atlas/data/: abc_mouse.py  abm_celltypes.py  ai_synphys.py  base.py  bicn.py  mouse_brain.py
airavata_cerebrum/atlas/model/: builder.py  mousev1.py  regions.py  structure.py
airavata_cerebrum/atlas/operations/: netops.py
airavata_cerebrum/cybershuttle/annotations/: decorator.py
airavata_cerebrum/dataset/: abc_mouse.py  abm_celltypes.py  ai_synphys.py  bicn.py
airavata_cerebrum/model/: builder.py  desc.py  mousev1.py  structure.py
airavata_cerebrum/operations/: abc_mouse.py  abm_celltypes.py  ai_synphys.py  dict_filter.py  json_filter.py  mousev1.py  netops.py  xform.py
airavata_cerebrum/util/: __init__.py  desc_config.py  io.py
airavata_cerebrum/view/: tree.py
atlas/: abc_mouse.py  bicn.py  build_network.py  cellxgene.py  merfish2model.ipynb  merfish_download.ipynb
atlas/data/: abc_mouse.py
atlas/model/: builder.py  regions.py
atlas/operations/: netops.py
cellxgene/: utils.py
notebooks/: atlas2cellprop.ipynb  merfish2model.ipynb
resources/BMTK_v1_demo/: BMTK_V1.ipynb  requirements.txt  settings.ini
resources/notebooks/: V1L4-Nest-Run.ipynb  V1L4-Notebook.ipynb  V1L4-Scratch.ipynb  V1L4-View.ipynb  atlas2cellprop.ipynb  bmtk_pointnet_run.py  merfish2model.ipynb  nest_run.py  v1l4.py
resources/notebooks/mousev1/: model.py  operations.py
resources/notebooks/v1l4/: config_nest.json
resources/notebooks/v1l4/components/cell_models/: 320207387_glif_lif_asc_config.json  322723785_glif_lif_asc_config.json  322761772_glif_lif_asc_config.json  323838579_glif_lif_asc_config.json  324065524_glif_lif_asc_config.json  325464516_glif_lif_asc_config.json  327644217_glif_lif_asc_config.json  329550277_glif_lif_asc_config.json  329557305_glif_lif_asc_config.json  341459814_glif_lif_asc_config.json  354833767_glif_lif_asc_config.json  369697038_glif_lif_asc_config.json  386049446_glif_lif_asc_config.json  395785266_glif_lif_asc_config.json  397248752_glif_lif_asc_config.json  397354239_glif_lif_asc_config.json  465924786_glif_lif_asc_config.json  466378900_glif_lif_asc_config.json  467003163_glif_lif_asc_config.json  467357834_glif_lif_asc_config.json  469704261_glif_lif_asc_config.json  469734859_glif_lif_asc_config.json  469763389_glif_lif_asc_config.json  473020156_glif_lif_asc_config.json  473909767_glif_lif_asc_config.json  474626527_glif_lif_asc_config.json  475740357_glif_lif_asc_config.json  475838754_glif_lif_asc_config.json  475894121_glif_lif_asc_config.json  476099282_glif_lif_asc_config.json  476218657_glif_lif_asc_config.json  476266853_glif_lif_asc_config.json  476562817_glif_lif_asc_config.json  476753465_glif_lif_asc_config.json  478439166_glif_lif_asc_config.json  478447600_glif_lif_asc_config.json  478586425_glif_lif_asc_config.json  478793814_glif_lif_asc_config.json  478958894_glif_lif_asc_config.json  479179020_glif_lif_asc_config.json  (+117 more)
resources/notebooks/v1l4/components/point_neuron_models/: 320207387_glif_lif_asc_config.json  322723785_glif_lif_asc_config.json  322761772_glif_lif_asc_config.json  323838579_glif_lif_asc_config.json  324065524_glif_lif_asc_config.json  325464516_glif_lif_asc_config.json  327644217_glif_lif_asc_config.json  329550277_glif_lif_asc_config.json  329557305_glif_lif_asc_config.json  341459814_glif_lif_asc_config.json  354833767_glif_lif_asc_config.json  369697038_glif_lif_asc_config.json  386049446_glif_lif_asc_config.json  395785266_glif_lif_asc_config.json  397248752_glif_lif_asc_config.json  397354239_glif_lif_asc_config.json  465924786_glif_lif_asc_config.json  466378900_glif_lif_asc_config.json  467003163_glif_lif_asc_config.json  467357834_glif_lif_asc_config.json  469704261_glif_lif_asc_config.json  469734859_glif_lif_asc_config.json  469763389_glif_lif_asc_config.json  473020156_glif_lif_asc_config.json  473909767_glif_lif_asc_config.json  474626527_glif_lif_asc_config.json  475740357_glif_lif_asc_config.json  475838754_glif_lif_asc_config.json  475894121_glif_lif_asc_config.json  476099282_glif_lif_asc_config.json  476218657_glif_lif_asc_config.json  476266853_glif_lif_asc_config.json  476562817_glif_lif_asc_config.json  476753465_glif_lif_asc_config.json  478439166_glif_lif_asc_config.json  478447600_glif_lif_asc_config.json  478586425_glif_lif_asc_config.json  478793814_glif_lif_asc_config.json  478958894_glif_lif_asc_config.json  479179020_glif_lif_asc_config.json  (+92 more)
resources/notebooks/v1l4/components/synapse_models/: e23_to_pv.json  e23_to_sst.json  e23_to_vip.json  e4_to_e4.json  e4_to_e5et.json  e4_to_pv.json  e5et_to_e5et.json  e5et_to_pv.json  (+38 more)
resources/notebooks/v1l4/config/: config_bkg.json
resources/notebooks/v1l4/description/: config.json  config_template.json  config_template.yaml  custom_mod.json  data2model_map.json  data2model_map_output.json
resources/notebooks/v1l4/network/: bkg_node_types.csv  bkg_nodes.h5  bkg_v1l4_edge_types.csv  bkg_v1l4_edges.h5  v1l4_node_types.csv  v1l4_nodes.h5  v1l4_v1l4_edge_types.csv  v1l4_v1l4_edges.h5
resources/scripts/: v1l4_nest_notebook.py
scripts/: build_network.py
tests/: V1L4-Notebook.ipynb  V1L4-View.ipynb  abm_ct.py  config_net.py  ct_workflow.json  v1_convert2model.py  v1l4.py  v1l4_view.py  validation_test.py
tests/abm_ct/description/: db_connect.json  db_connect_output.json  db_location_map.json  db_select_xform.json  network_desc_output.json
tests/v1/: v1_conn_props_April2.json  v1_custom_full.json  v1_edge_models_April2.json  v1_simple_custom_mod.json
tests/v1l4/description/: config.json  config_template.json  custom_mod.json  data2model_map.json  data2model_map_output.json  db_connect.json  db_location_map.json  db_location_map_output.json  db_xform.json  db_xform_output.json  model_patch.json  source_data.json  source_data_output.json
